# bouncy

./: .gitignore  README.md  main.tscn  project.godot
gdnative/bouncy/: bouncy.gdnlib
gdnative/src/: CMakeLists.txt  bouncy.gdnlib  bouncy.h  bouncy.hpp  camera.cpp  camera.h  camera.hpp  processing.cpp  processing.hpp  wrapper.c
images/: player_body.png.import  player_eye.png.import
scenes/: Player.gd  Player.tscn
scripts/: Camera.gd  Detection.gd  Display.gd  GLOBAL.gd  Gameplay.gd  Player.gd  Shadow.gd
scripts/native/: camera.gdns
